[package]
name = "iced-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.6.0"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
branch = "master"
features = [
    "UI_Shell",
]